# coding-plan-usage

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.json.example  pyproject.toml
.github/workflows/: ci.yml
coding_plan_usage/: __main__.py  config.py  formatter.py  menubar.py  models.py
coding_plan_usage/providers/: __init__.py  base.py  bigmodel.py  infini.py  kimi.py
tests/: test_bigmodel.py  test_infini.py  test_kimi.py
