[tool.poetry]
name = "coding-plan-usage"
version = "0.1.0"
description = "A CLI tool to fetch and display Coding Plan usage from multiple AI providers"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "coding_plan_usage"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = ">=0.27.0"
pydantic = ">=2.0.0"
pyobjc-framework-cocoa = { version = "^12.1", markers = "sys_platform == 'darwin'" }

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.0.0"
mypy = "^1.8.0"
ruff = "^0.14.0"

[tool.poetry.scripts]
coding-plan-usage = "coding_plan_usage.__main__:cli"
coding-plan-usage-menubar = "coding_plan_usage.menubar:run_menubar"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
